Fixed all the errors